NM-5296 UoT Checkout page

--- a/lib/tasks/uot/pages/join-our-community.html
+++ b/lib/tasks/uot/pages/join-our-community.html
@@ -9,7 +9,7 @@
 
                 <h3>I’m looking for <span>experts</span></h3>
                 <p>Find, collaboprate with, and work with Subject Matter Experts</p>
-                <p><a href="/users?role=seller&return_to=/transactable_types/project/list" class="button-a">I want to hire</a></p>
+                <p><a href="/users?role=seller&amp;return_to=/transactable_types/project/list" class="button-a">I want to hire</a></p>
             </div>
 
             <div class="signup-option">
