UoT privacy policy and terms of use

--- a/lib/tasks/uot/pages/privacy-policy.html
+++ b/lib/tasks/uot/pages/privacy-policy.html
@@ -13,20 +13,39 @@
         <h3>You and Company agree as follows:</h3>
 
         <ol>
-            <li><p><b>Personally-Identifiable Information</b>.  Company may collect, maintain, and process personally-identifiable information that You voluntarily provide in accessing this Site (including, but not limited to, your name, company name, address, email address, login details), data related to your Site preferences, and Internet traffic data (as explained in Section 2).</p></li>
-
-            <li><p><b>Internet Traffic Data</b>.  When your computer connects to the Internet and to this Site, Internet traffic data is generated.  This data alone is not sufficient to identify you.  Company may collect, maintain, and process Internet traffic information including, but not limited to, the ISP origin of your connection, your address, the type and version of your Internet browser, and the length of your connection.  This information may be used to analyze this Site’s traffic and to improve this Site by tailoring it to the particular interests of our visitors.</p></li>
-
-            <li><p><b>Cookies</b>.  To improve this Site, Company may use “cookies” to customize the information presented to You.  Cookies are small files that are stored by your browser on your computer’s hard drive and which may contain information such as your Site preferences.  Most Internet browsers automatically accept cookies, but you can configure your browser to prevent cookies from being stored on your computer.  Some features of this Site will not function fully unless you configure your browser to accept cookies.</p></li>
-
-            <li><p><b>Use of Personally-Identifiable Information</b>.  Company does not sell, rent or lease personally-identifiable information to third parties.  Company reserves the right to disclose your personally-identifiable information as required by law and when Company believes that disclosure is necessary to protect its rights, or in the good-faith belief that it is necessary to comply with the law.  Further, Company may share personally-identifiable information and other information if Company believes, in its sole discretion, that such sharing is necessary or appropriate to: (a) respond to a court order, subpoena or other legal process; (b) comply with the law or legal process; (c) protect or defend the rights or property of Company or others; (d) enforce this Privacy Policy; or (e) respond to claims that the content of any communication violates the rights of others.  Except as otherwise set forth in this Privacy Policy, Company will not share personally-identifiable information with any third-party unless You have given prior consent or Company is compelled to do so by law or by the order of a court or agency.</p></li>
-
-            <li><p><b>No Rights of Third Parties</b>. This Privacy Policy does not create rights enforceable by third parties or require disclosure of any personally-identifiable information.</p></li>
-
-            <li><p><b>Changes to this Privacy Policy</b>.  Company occasionally updates this Privacy Policy to reflect feedback or changes in the law without any notice to the User.  You should periodically review this Privacy Policy to be informed of how Company is protecting your information.  Each time You access or use this Site, You must review and abide by the then-current version of this Privacy Policy.</p></li>
+            <li>
+                <h4>Personally-Identifiable Information</h4>
+                <p>Company may collect, maintain, and process personally-identifiable information that You voluntarily provide in accessing this Site (including, but not limited to, your name, company name, address, email address, login details), data related to your Site preferences, and Internet traffic data (as explained in Section 2).</p>
+            </li>
 
             <li>
-                <p><b>Contact Information</b>.  If you have any questions about this Privacy Policy, please contact us using the information below:</p>
+                <h4>Internet Traffic Data</h4>
+                <p>When your computer connects to the Internet and to this Site, Internet traffic data is generated.  This data alone is not sufficient to identify you.  Company may collect, maintain, and process Internet traffic information including, but not limited to, the ISP origin of your connection, your address, the type and version of your Internet browser, and the length of your connection.  This information may be used to analyze this Site’s traffic and to improve this Site by tailoring it to the particular interests of our visitors.</p>
+            </li>
+
+            <li>
+                <h4>Cookies</h4>
+                <p>To improve this Site, Company may use “cookies” to customize the information presented to You.  Cookies are small files that are stored by your browser on your computer’s hard drive and which may contain information such as your Site preferences.  Most Internet browsers automatically accept cookies, but you can configure your browser to prevent cookies from being stored on your computer.  Some features of this Site will not function fully unless you configure your browser to accept cookies.</p>
+            </li>
+
+            <li>
+                <h4>Use of Personally-Identifiable Information</h4>
+                <p>Company does not sell, rent or lease personally-identifiable information to third parties.  Company reserves the right to disclose your personally-identifiable information as required by law and when Company believes that disclosure is necessary to protect its rights, or in the good-faith belief that it is necessary to comply with the law.  Further, Company may share personally-identifiable information and other information if Company believes, in its sole discretion, that such sharing is necessary or appropriate to: (a) respond to a court order, subpoena or other legal process; (b) comply with the law or legal process; (c) protect or defend the rights or property of Company or others; (d) enforce this Privacy Policy; or (e) respond to claims that the content of any communication violates the rights of others.  Except as otherwise set forth in this Privacy Policy, Company will not share personally-identifiable information with any third-party unless You have given prior consent or Company is compelled to do so by law or by the order of a court or agency.</p>
+            </li>
+
+            <li>
+                <h4>No Rights of Third Parties</h4>
+                <p>This Privacy Policy does not create rights enforceable by third parties or require disclosure of any personally-identifiable information.</p>
+            </li>
+
+            <li>
+                <h4>Changes to this Privacy Policy</h4>
+                <p>Company occasionally updates this Privacy Policy to reflect feedback or changes in the law without any notice to the User.  You should periodically review this Privacy Policy to be informed of how Company is protecting your information.  Each time You access or use this Site, You must review and abide by the then-current version of this Privacy Policy.</p>
+            </li>
+
+            <li>
+                <h4>Contact Information</h4>
+                <p>If you have any questions about this Privacy Policy, please contact us using the information below:</p>
                 <p>Security Officer<br> 684 Bayway Blvd<br> Clearwater, FL 33767<br> <a href="mailto:Security_Officer@upsideoftalent.com">Security_Officer@upsideoftalent.com</a> </p>
             </li>
         </ol>
@@ -41,7 +60,7 @@
 
         <h3>Scope</h3>
         <p>This Safe Harbor Privacy Policy (the <i>“Policy”</i>) outlines our general policy and practices for implementing the Principles, including the types of information we gather, how we use it and the notice and choice affected individuals have regarding our use of and their ability to correct that information.  This privacy policy applies to all personal information received by Company whether in electronic, paper or verbal format.</p>
-        <p>If there is any conflict between the policies in this Policy and the Principles, the Principles shall govern.  This Policy is intended to supplement the Company Privacy Policy, which can be found at [[INSERT]].  To learn more about the Safe Harbor Framework, please visit <a href="http://export.gov/safeharbor/" rel="external">http://export.gov/safeharbor/</a>.</p>
+        <p>If there is any conflict between the policies in this Policy and the Principles, the Principles shall govern.  This Policy is intended to supplement the Company Privacy Policy, which can be found at <a href="https://http://upsideoftalent.com/privacy-policy">https://upsideoftalent.com/privacy-policy</a>. To learn more about the Safe Harbor Framework, please visit <a href="http://export.gov/safeharbor/" rel="external">http://export.gov/safeharbor/</a>.</p>
 
         <h3>Definitions</h3>
         <ol>
