NM-5438 Panel navigation is not visible at certain widths

--- a/lib/tasks/uot/pages/sme-benefits.html
+++ b/lib/tasks/uot/pages/sme-benefits.html
@@ -7,7 +7,7 @@
 
         <h3>Join A Global Marketplace Where Expertise Is King.</h3>
 
-        <p>Now there’s a fast, easy way for seasoned <abbr title="Subject Matter Experts">SMEs</abbr> to connect with businesses and organizations who need them.</p>
+        <p>Now there’s a fast, easy way for seasoned Subject Matter Experts (<i>SMEs</i>) to connect with businesses and organizations who need them.</p>
 
         <p>Upside of Talent (UoT) is a powerful digital marketplace for experienced professionals to showcase and market their subject matter expertise and services for project-based work, whether for hire or pro bono.</p>
 
