Revert "UOT 37 Update faq answers"
This reverts commit 08a7d3a2ba359c17594e8deabcb64b0993135114.

--- a/lib/tasks/uot/pages/faq.html
+++ b/lib/tasks/uot/pages/faq.html
@@ -235,7 +235,7 @@
 
             <dt>How do I search for the SME that will match my needs?</dt>
             <dd>
-                <p>Get started from the Upside of Talent Homepage by clicking the Search for Experts and entering the Keywords describing the expertise you require. You can also filter on Industry, Area of Expertise, Language, Workplace and Travel.</p>
+                <p>Xxx</p>
             </dd>
 
             <dt>How do I post a project?</dt>
@@ -245,7 +245,7 @@
 
             <dt>What does a posting include?</dt>
             <dd>
-                <p>We provide some guidance as to the details you should include in your posting including a Project Overview, Period of Performance, Description of the Work to be Performed.</p>
+                <p>We provide some guidance as to the details you should include in your posting</p>
             </dd>
 
             <dt>Can I message a SME directly?</dt>
